--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,15 @@
 {
-  "manifest_version": 2,
-  "name": "New Tab",
-  "version": "1.0",
-  "description": "A custom new tab page",
-  "chrome_url_overrides": {
-    "newtab": "index.html"
-  },
-  "permissions": ["storage", "bookmarks"]
+    "manifest_version": 2,
+    "name": "New Tab",
+    "version": "1.0",
+    "description": "A custom new tab page",
+    "chrome_url_overrides": {
+        "newtab": "index.html"
+    },
+    "permissions": ["storage", "bookmarks"],
+    "browser_specific_settings": {
+        "gecko": {
+            "id": "test@test.test"
+        }
+    }
 }
